# DiffQL

./: .clangd  .gitmodules  CMakeLists.txt  build.sh  readme.md  run.sh  run_postgresql_parser_test.sh  run_postgresql_parser_test_docker.sh  run_postgresql_schema_diff_test.sh  run_postgresql_schema_diff_test_docker.sh
SampleDB/MariaDB/: nation2.sql
SampleDB/PostGreSQL/: nation.sql  nation_v1.sql  nation_v2.sql
SampleDB/Postgre/: nation_pg.sql  test_schema.sql
grammar/: MariaDBDDLLexer.g4  MariaDBDDLParser.g4
include/DiffQL/CanonicalObjectModel/: Hierarchy.hpp
include/DiffQL/CanonicalObjectModel/TypeNormalization/: TypeMapper.hpp
include/DiffQL/Connectors/: BaseConnector.hpp
include/DiffQL/Connectors/MariaDB/: Connector.hpp
include/DiffQL/Connectors/PostGreSQL/: Connector.hpp
include/DiffQL/Connectors/PostgreSQL/: Connector.hpp
include/DiffQL/Diff/: SchemaDiff.hpp
include/DiffQL/DiffEngine/: DiffEngine.hpp  LevDistance.hpp
include/DiffQL/ErrNo/: ErrNo.hpp
include/DiffQL/MigrationGenerator/: MariaDBMigrationGenerator.hpp  MigrationGenerator.hpp  PostgreSQLMigrationGenerator.hpp
include/DiffQL/Parser/: DDLVisitor.hpp
include/DiffQL/UI/: ConsoleLog.hpp  DiffViewer.hpp
src/: main.cpp  postgresql_parser_test_main.cpp
src/CanonicalObjectModel/TypeNormalization/: TypeMapper.cpp
src/Connectors/MariaDB/: Connector.cpp
src/Connectors/PostGreSQL/: Connector.cpp
src/Connectors/PostgreSQL/: Connector.cpp
src/Diff/: SchemaDiff.cpp
src/DiffEngine/: DiffEngine.cpp
src/MigrationGenerator/: MariaDBMigrationGenerator.cpp  MigrationGenerator.cpp  PostgreSQLMigrationGenerator.cpp
src/Parser/: DDLVisitor.cpp
src/UI/: ConsoleLog.cpp  DiffViewer.cpp
src/tests/: postgresql_parser_test_main.cpp  postgresql_schema_diff_test_main.cpp
tests/: DiffEngineTests.cpp  docker-compose.yml
